# RustProjectTemplate

./: .gitignore  Cargo.toml  README.md
local_test/: Cargo.toml
local_test/src/: app_test.rs  function_test.rs  lib.rs  web_test.rs
