[workspace]
members = ["local_test"]

# [package]
# name = "Project" # the name of the package
# description = "Workspace template to make new projects"
# version = "0.1.0"    # the current version, obeying semver
# authors = ["Alice <a@example.com>", "Bob <b@example.com>"]

# #exclude = ["local_test/", ".*"]
# # build = "build.rs"
# license = "Apache-2.0"

[profile.release]
codegen-units = 1 # Compile creates one after another so compiler can optimize better
debug = false # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false # Disable incremental compilation
# Enable Link Time Optimization
# to reduce final binary size with help of the linker
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
overflow-checks = false # Disable overflow checks
panic = 'abort' # Strip expesive panic clean-up logic
rpath = false # Disable rpath
strip = "symbols" # Automatically strip symbols from the binary

[profile.dev]
opt-level = 0
# debug = true
split-debuginfo = '...'  # Platform-specific.
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true
codegen-units = 256
rpath = false
